--- a/search.html
+++ b/search.html
@@ -1,89 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
-  <link rel="shortcut icon" href="icons/icon.ico" type="image/x-icon">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#ae00ff" />
-  <meta name="robots" content="index, follow">
-  <meta property="og:image" content="https://netflix-1uh.pages.dev/og.jpg"/>
-  <meta name="description"
-    content="">
-  <title>ModirimovieVip</title>
-
-  <link rel="preload stylesheet" href="css/center-atom.min.css" as="style">
-  <link rel="preload stylesheet" href="css/style.css" as="style">
-  <script async src="js/jquery.js"></script>
-  <!-- Google tag (gtag.js) -->
-  <script defer src="https://www.googletagmanager.com/gtag/js?id=G-THTQ9GZQ0J">
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-THTQ9GZQ0J');
-  </script>
-<!-- Serviceworker code for PWA  -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/sw.js').then(function(registration) {
-          console.log('Service worker registered: ', registration.scope);
-        }).catch(function(error) {
-          console.log('Service worker registration failed: ', error);
-        });
-      });
-    }
-  </script>
-</head>
-
-<body>
-  <div class="search-container">
-    <input type="search" id="search-input" placeholder="Search Movie">
-    <button id="search-button">Search</button>
-  </div>
-  <center>
-    <div id="video" class="video">
-      <iframe id="iframe" src="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      <p style="color: rgb(79, 216, 221); font-weight: 500;"></p>
-      <!-- Go to www.addthis.com/dashboard to customize your tools -->
-      <div class="addthis_inline_share_toolbox"></div>
-      <div id="webSeriesData"></div>
-    </div>
-  </center>
-  <div id="results"></div>
-  <center style="margin-top: 2vh;">
-    <div class="alwaysVisibleContent">
-
-
-
-      <div class="pagelinks">
-	  
-	  
-	  
-
-      </div>
-    </div>
-   
-
-
-      <div class="footerLinks">
-        <a href="https://tinyurl.com/2embed-api" target="_blank"></a>
-        <a href="https://jquery.com/" target="_blank"></a>
-        <a href="https://codebyzach.github.io/pace/" target="_blank"></a>
-        <a href="https://www.2embed.to/library" target="_blank"></a>
-        <a href="https://imdb.com" target="_blank"></a>
-        <a href="https://corsproxy.io" target="_blank"></a>
-      </div>
-    </div>
-  </center>
-  <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
-  <script src="js/script.min.js"></script>
-    <script src="js/sw.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9489381289747189"
-    crossorigin="anonymous"></script>
-  <!-- Go to www.addthis.com/dashboard to customize your tools -->
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-624474fdd4c42686"></script>
-</body>
-</html>
+<script>
+<!-- code by https://www.html-code-generator.com -->
+document.write(unescape('%3C%21DOCTYPE%20html%3E%0A%3Chtml%20lang%3D%22en%22%3E%0A%0A%3Chead%3E%0A%20%20%3Cmeta%20charset%3D%22UTF-8%22%3E%0A%20%20%3Clink%20rel%3D%22manifest%22%20href%3D%22/manifest.json%22%3E%0A%20%20%3Clink%20rel%3D%22apple-touch-icon%22%20href%3D%22/icons/apple-touch-icon.png%22%3E%0A%20%20%3Clink%20rel%3D%22shortcut%20icon%22%20href%3D%22icons/icon.ico%22%20type%3D%22image/x-icon%22%3E%0A%20%20%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22%3E%0A%20%20%3Cmeta%20name%3D%22theme-color%22%20content%3D%22%23ae00ff%22%20/%3E%0A%20%20%3Cmeta%20name%3D%22robots%22%20content%3D%22index%2C%20follow%22%3E%0A%20%20%3Cmeta%20property%3D%22og%3Aimage%22%20content%3D%22https%3A//netflix-1uh.pages.dev/og.jpg%22/%3E%0A%20%20%3Cmeta%20name%3D%22description%22%0A%20%20%20%20content%3D%22%22%3E%0A%20%20%3Ctitle%3EModirimovieVip%3C/title%3E%0A%0A%20%20%3Clink%20rel%3D%22preload%20stylesheet%22%20href%3D%22css/center-atom.min.css%22%20as%3D%22style%22%3E%0A%20%20%3Clink%20rel%3D%22preload%20stylesheet%22%20href%3D%22css/style.css%22%20as%3D%22style%22%3E%0A%20%20%3Cscript%20async%20src%3D%22js/jquery.js%22%3E%3C/script%3E%0A%20%20%3C%21--%20Google%20tag%20%28gtag.js%29%20--%3E%0A%20%20%3Cscript%20defer%20src%3D%22https%3A//www.googletagmanager.com/gtag/js%3Fid%3DG-THTQ9GZQ0J%22%3E%0A%20%20%20%20window.dataLayer%20%3D%20window.dataLayer%20%7C%7C%20%5B%5D%3B%0A%20%20%20%20function%20gtag%28%29%20%7B%20dataLayer.push%28arguments%29%3B%20%7D%0A%20%20%20%20gtag%28%27js%27%2C%20new%20Date%28%29%29%3B%0A%20%20%20%20gtag%28%27config%27%2C%20%27G-THTQ9GZQ0J%27%29%3B%0A%20%20%3C/script%3E%0A%3C%21--%20Serviceworker%20code%20for%20PWA%20%20--%3E%0A%20%20%3Cscript%3E%0A%20%20%20%20if%20%28%27serviceWorker%27%20in%20navigator%29%20%7B%0A%20%20%20%20%20%20window.addEventListener%28%27load%27%2C%20function%28%29%20%7B%0A%20%20%20%20%20%20%20%20navigator.serviceWorker.register%28%27/sw.js%27%29.then%28function%28registration%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20console.log%28%27Service%20worker%20registered%3A%20%27%2C%20registration.scope%29%3B%0A%20%20%20%20%20%20%20%20%7D%29.catch%28function%28error%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20console.log%28%27Service%20worker%20registration%20failed%3A%20%27%2C%20error%29%3B%0A%20%20%20%20%20%20%20%20%7D%29%3B%0A%20%20%20%20%20%20%7D%29%3B%0A%20%20%20%20%7D%0A%20%20%3C/script%3E%0A%3C/head%3E%0A%0A%3Cbody%3E%0A%20%20%3Cdiv%20class%3D%22search-container%22%3E%0A%20%20%20%20%3Cinput%20type%3D%22search%22%20id%3D%22search-input%22%20placeholder%3D%22Search%20Movie%22%3E%0A%20%20%20%20%3Cbutton%20id%3D%22search-button%22%3ESearch%3C/button%3E%0A%20%20%3C/div%3E%0A%20%20%3Ccenter%3E%0A%20%20%20%20%3Cdiv%20id%3D%22video%22%20class%3D%22video%22%3E%0A%20%20%20%20%20%20%3Ciframe%20id%3D%22iframe%22%20src%3D%22%22%20frameborder%3D%220%22%20webkitallowfullscreen%20mozallowfullscreen%20allowfullscreen%3E%3C/iframe%3E%0A%20%20%20%20%20%20%3Cp%20style%3D%22color%3A%20rgb%2879%2C%20216%2C%20221%29%3B%20font-weight%3A%20500%3B%22%3E%3C/p%3E%0A%20%20%20%20%20%20%3C%21--%20Go%20to%20www.addthis.com/dashboard%20to%20customize%20your%20tools%20--%3E%0A%20%20%20%20%20%20%3Cdiv%20class%3D%22addthis_inline_share_toolbox%22%3E%3C/div%3E%0A%20%20%20%20%20%20%3Cdiv%20id%3D%22webSeriesData%22%3E%3C/div%3E%0A%20%20%20%20%3C/div%3E%0A%20%20%3C/center%3E%0A%20%20%3Cdiv%20id%3D%22results%22%3E%3C/div%3E%0A%20%20%3Ccenter%20style%3D%22margin-top%3A%202vh%3B%22%3E%0A%20%20%20%20%3Cdiv%20class%3D%22alwaysVisibleContent%22%3E%0A%0A%0A%0A%20%20%20%20%20%20%3Cdiv%20class%3D%22pagelinks%22%3E%0A%09%20%20%0A%09%20%20%0A%09%20%20%0A%0A%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%3C/div%3E%0A%20%20%20%0A%0A%0A%20%20%20%20%20%20%3Cdiv%20class%3D%22footerLinks%22%3E%0A%20%20%20%20%20%20%20%20%3Ca%20href%3D%22https%3A//tinyurl.com/2embed-api%22%20target%3D%22_blank%22%3E%3C/a%3E%0A%20%20%20%20%20%20%20%20%3Ca%20href%3D%22https%3A//jquery.com/%22%20target%3D%22_blank%22%3E%3C/a%3E%0A%20%20%20%20%20%20%20%20%3Ca%20href%3D%22https%3A//codebyzach.github.io/pace/%22%20target%3D%22_blank%22%3E%3C/a%3E%0A%20%20%20%20%20%20%20%20%3Ca%20href%3D%22https%3A//www.2embed.to/library%22%20target%3D%22_blank%22%3E%3C/a%3E%0A%20%20%20%20%20%20%20%20%3Ca%20href%3D%22https%3A//imdb.com%22%20target%3D%22_blank%22%3E%3C/a%3E%0A%20%20%20%20%20%20%20%20%3Ca%20href%3D%22https%3A//corsproxy.io%22%20target%3D%22_blank%22%3E%3C/a%3E%0A%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%3C/div%3E%0A%20%20%3C/center%3E%0A%20%20%3Cscript%20src%3D%22https%3A//cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js%22%3E%3C/script%3E%0A%20%20%3Cscript%20src%3D%22js/script.min.js%22%3E%3C/script%3E%0A%20%20%20%20%3Cscript%20src%3D%22js/sw.js%22%3E%3C/script%3E%0A%20%20%3Cscript%20async%20src%3D%22https%3A//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js%3Fclient%3Dca-pub-9489381289747189%22%0A%20%20%20%20crossorigin%3D%22anonymous%22%3E%3C/script%3E%0A%20%20%3C%21--%20Go%20to%20www.addthis.com/dashboard%20to%20customize%20your%20tools%20--%3E%0A%20%20%3Cscript%20type%3D%22text/javascript%22%20src%3D%22//s7.addthis.com/js/300/addthis_widget.js%23pubid%3Dra-624474fdd4c42686%22%3E%3C/script%3E%0A%3C/body%3E%0A%3C/html%3E'))
+</script>
