--- a/index.html
+++ b/index.html
@@ -1,77 +1,4 @@
-<!DOCTYPE html>
-<head><title></title>
-<style>
-
-body { background: #323232 ; }
-
-figure { 
-  position: absolute;
-  margin: auto;
-  top: 0; bottom: 0; left: 0; right: 0;
-  width: 6.250em; height: 6.250em;
-  animation: rotate 2.4s linear infinite;
-}
-.white { 
-  top: 0; bottom: 0; left: 0; right: 0; 
-  background: white; 
-  animation: flash 2.4s linear infinite;
-  opacity: 0;
-}
-.dot {
-  position: absolute;
-  margin: auto;
-  width: 2.4em; height: 2.4em;
-  border-radius: 100%;
-  transition: all 1s ease;
-}
-.dot:nth-child(2) { top: 0; bottom: 0; left: 0; background: #FF4444; animation: dotsY 2.4s linear infinite; }
-.dot:nth-child(3) { left: 0; right: 0; top: 0; background: #FFBB33; animation: dotsX 2.4s linear infinite; }
-.dot:nth-child(4) { top: 0; bottom: 0; right: 0; background: #99CC00; animation: dotsY 2.4s linear infinite; }
-.dot:nth-child(5) { left: 0; right: 0; bottom: 0; background: #33B5E5; animation: dotsX 2.4s linear infinite; }
-
-@keyframes rotate {
-  0% { transform: rotate( 0 ); }
-  10% { width: 6.250em; height: 6.250em; }
-  66% { width: 2.4em; height: 2.4em; }
-  100%{ transform: rotate(360deg); width: 6.250em; height: 6.250em; }
-}
-
-@keyframes dotsY {
-  66% { opacity: .1; width: 2.4em; }
-  77%{ opacity: 1; width: 0; }
-}
-@keyframes dotsX {
-  66% { opacity: .1; height: 2.4em;}
-  77%{ opacity: 1; height: 0; }
-}
-
-@keyframes flash {
-  33% { opacity: 0; border-radius: 0%; }
-  55%{ opacity: .6; border-radius: 100%; }
-  66%{ opacity: 0; }
-}
-
-</style>
-
 <script>
-
+<!-- code by https://www.html-code-generator.com -->
+document.write(unescape('%3C%21DOCTYPE%20html%3E%0A%3Chead%3E%3Ctitle%3E%3C/title%3E%0A%3Cstyle%3E%0A%0Abody%20%7B%20background%3A%20%23323232%20%3B%20%7D%0A%0Afigure%20%7B%20%0A%20%20position%3A%20absolute%3B%0A%20%20margin%3A%20auto%3B%0A%20%20top%3A%200%3B%20bottom%3A%200%3B%20left%3A%200%3B%20right%3A%200%3B%0A%20%20width%3A%206.250em%3B%20height%3A%206.250em%3B%0A%20%20animation%3A%20rotate%202.4s%20linear%20infinite%3B%0A%7D%0A.white%20%7B%20%0A%20%20top%3A%200%3B%20bottom%3A%200%3B%20left%3A%200%3B%20right%3A%200%3B%20%0A%20%20background%3A%20white%3B%20%0A%20%20animation%3A%20flash%202.4s%20linear%20infinite%3B%0A%20%20opacity%3A%200%3B%0A%7D%0A.dot%20%7B%0A%20%20position%3A%20absolute%3B%0A%20%20margin%3A%20auto%3B%0A%20%20width%3A%202.4em%3B%20height%3A%202.4em%3B%0A%20%20border-radius%3A%20100%25%3B%0A%20%20transition%3A%20all%201s%20ease%3B%0A%7D%0A.dot%3Anth-child%282%29%20%7B%20top%3A%200%3B%20bottom%3A%200%3B%20left%3A%200%3B%20background%3A%20%23FF4444%3B%20animation%3A%20dotsY%202.4s%20linear%20infinite%3B%20%7D%0A.dot%3Anth-child%283%29%20%7B%20left%3A%200%3B%20right%3A%200%3B%20top%3A%200%3B%20background%3A%20%23FFBB33%3B%20animation%3A%20dotsX%202.4s%20linear%20infinite%3B%20%7D%0A.dot%3Anth-child%284%29%20%7B%20top%3A%200%3B%20bottom%3A%200%3B%20right%3A%200%3B%20background%3A%20%2399CC00%3B%20animation%3A%20dotsY%202.4s%20linear%20infinite%3B%20%7D%0A.dot%3Anth-child%285%29%20%7B%20left%3A%200%3B%20right%3A%200%3B%20bottom%3A%200%3B%20background%3A%20%2333B5E5%3B%20animation%3A%20dotsX%202.4s%20linear%20infinite%3B%20%7D%0A%0A@keyframes%20rotate%20%7B%0A%20%200%25%20%7B%20transform%3A%20rotate%28%200%20%29%3B%20%7D%0A%20%2010%25%20%7B%20width%3A%206.250em%3B%20height%3A%206.250em%3B%20%7D%0A%20%2066%25%20%7B%20width%3A%202.4em%3B%20height%3A%202.4em%3B%20%7D%0A%20%20100%25%7B%20transform%3A%20rotate%28360deg%29%3B%20width%3A%206.250em%3B%20height%3A%206.250em%3B%20%7D%0A%7D%0A%0A@keyframes%20dotsY%20%7B%0A%20%2066%25%20%7B%20opacity%3A%20.1%3B%20width%3A%202.4em%3B%20%7D%0A%20%2077%25%7B%20opacity%3A%201%3B%20width%3A%200%3B%20%7D%0A%7D%0A@keyframes%20dotsX%20%7B%0A%20%2066%25%20%7B%20opacity%3A%20.1%3B%20height%3A%202.4em%3B%7D%0A%20%2077%25%7B%20opacity%3A%201%3B%20height%3A%200%3B%20%7D%0A%7D%0A%0A@keyframes%20flash%20%7B%0A%20%2033%25%20%7B%20opacity%3A%200%3B%20border-radius%3A%200%25%3B%20%7D%0A%20%2055%25%7B%20opacity%3A%20.6%3B%20border-radius%3A%20100%25%3B%20%7D%0A%20%2066%25%7B%20opacity%3A%200%3B%20%7D%0A%7D%0A%0A%3C/style%3E%0A%0A%3Cscript%3E%0A%0A%3C/script%3E%0A%3C/head%3E%0A%3Cbody%3E%0A%0A%3Cfigure%3E%0A%20%20%20%20%3Cdiv%20class%3D%22dot%20white%22%3E%3C/div%3E%0A%20%20%20%20%3Cdiv%20class%3D%22dot%22%3E%3C/div%3E%0A%20%20%20%20%3Cdiv%20class%3D%22dot%22%3E%3C/div%3E%0A%20%20%20%20%3Cdiv%20class%3D%22dot%22%3E%3C/div%3E%0A%20%20%20%20%3Cdiv%20class%3D%22dot%22%3E%3C/div%3E%0A%3C/figure%3E%20%0A%0A%0A%3Cscript%20type%3D%22text/javascript%22%3E%0A%20//Redireccionamiento%20tras%205%20segundos%0A%20setTimeout%28%20function%28%29%20%7B%20window.location.href%20%3D%20%22home.html%22%3B%20%7D%2C%205000%20%29%3B%0A%20%3C/script%3E%0A%0A%3C/body%3E%0A%3C/html%3E%0A'))
 </script>
-</head>
-<body>
-
-<figure>
-    <div class="dot white"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-</figure> 
-
-
-<script type="text/javascript">
- //Redireccionamiento tras 5 segundos
- setTimeout( function() { window.location.href = "home.html"; }, 5000 );
- </script>
-
-</body>
-</html>
